Update to Getting Started section
Added instruction on how to add JavaFX Library to project